bpo-37954: Fix reference leak in the symtable (GH-15514)